Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138059

[REG 6.9.0-6.9.1] [windows] Strange Qt warning on QAudioSource::start() when non-default sample rate is used

XMLWordPrintable

    • Windows
    • 2eef24a1d (dev), 407b6c64f (6.10), 56a16de8c (6.9), 7848db4f7 (tqtc/lts-6.8)

      There is strange Qt warning when trying to use QAudioSource with non-default sample rate.

      IAudioClient3::GetService failed to obtain IAudioClockAdjustment "AUDCLNT_E_WRONG_ENDPOINT_TYPE"
      

      Minimal reproducer:

      #include <QCoreApplication>
      #include <QMediaDevices>
      #include <QAudioDevice>
      #include <QAudioFormat>
      #include <QAudioSource>
      #include <QIODevice>
      
      int main(int argc, char *argv[])
      {
          qputenv("QT_MEDIA_BACKEND", "windows");
      
          QCoreApplication a(argc, argv);
      
          const QAudioDevice device = QMediaDevices::defaultAudioInput();
      
          QAudioFormat format = device.preferredFormat();
          format.setSampleRate(device.minimumSampleRate());
      
          QAudioSource audioSource(device, format);
          audioSource.start();
      
          return 0;
      }
      

      Here is standalone example audiosource_warning.zip
      You can simply run it and check debug output.

        1. audiosource_warning.zip
          1 kB
          Vladimir Belyavsky
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            timblechmann tim blechmann
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes